# truewright

./: .gitignore  Cargo.toml  PROPOSAL.md  README.md  dist-workspace.toml
.github/workflows/: chrome-beta.yml
.research/: High Performance Browser Automation.md  REVIEW.md  bidi-protocol-spike.md
crates/agent/: Cargo.toml
crates/agent/src/: error.rs  harness.rs  lib.rs  prompt.rs  skills.rs  tools.rs  types.rs  vision.rs
crates/agent/tests/: agent_loop.rs  vision_routing.rs
crates/agent/tests/fixtures/: form.html
crates/agent/tests/support/: llm_stub.rs  mod.rs
crates/cdp/: Cargo.toml
crates/cdp/src/: connection.rs  download.rs  error.rs  launch.rs  lib.rs  ops.rs  os_input.rs  session.rs  transport.rs
crates/cdp/src/protocol/: browser.rs  dom.rs  fetch.rs  input.rs  mod.rs  network.rs  page.rs  runtime.rs  target.rs
crates/cdp/tests/: full_cycle.rs
crates/engine/: Cargo.toml
crates/engine/assets/: resolve.js  seeded_random.js  train.js  virtual_clock.js  walker.js
crates/engine/src/: console.rs  error.rs  keys.rs  lib.rs  recording.rs  session.rs  snapshot.rs  trace_view.rs  yaml_runner.rs
crates/engine/src/motion/: mod.rs  path.rs  profile_store.rs  train.rs  typing.rs
crates/engine/src/network/: cassette.rs  mod.rs  recording.rs  replay.rs
crates/engine/tests/: action_trace_flow.rs  assert_flow.rs  console_capture_flow.rs  cross_origin_oopif_flow.rs  deterministic_init_flow.rs  iframe_snapshot_flow.rs  network_flow.rs  popup_auto_attach_flow.rs  recording_flow.rs  session_flow.rs  shadow_dom_flow.rs  trace_view_flow.rs  true_input_flow.rs  virtual_clock_flow.rs  yaml_runner_flow.rs
crates/engine/tests/fixtures/: animated.html  clock_fixture.html  console_fixture.html  form.html  iframes.html  init_script.html  network.html  oopif_inner.html  oopif_top.html  popup_opener.html  popup_target.html  random_fixture.html  shadow_dom.html
crates/engine/tests/support/: http_server.rs
crates/llm/: Cargo.toml
crates/llm/src/: auth.rs  client.rs  client_compat.rs  client_responses.rs  config.rs  error.rs  lib.rs  types.rs
crates/llm/src/auth/: callback.rs  flows.rs  jwt.rs  login.rs  mod.rs  pkce.rs  store.rs
crates/llm/tests/: compat_client_flow.rs  live_smoke.rs  oauth_flow.rs  responses_client_flow.rs
crates/llm/tests/support/: mod.rs  stub_server.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
docker/: Dockerfile  Dockerfile.chrome-beta  run-tests-chrome-beta.sh  run-tests.sh
openspec/changes/action-trace/: proposal.md  tasks.md
openspec/changes/agent-harness/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-docker-test-harness/: container-test-run.txt
openspec/changes/archive/2026-07-10-phase-0-cdp-spike/: doctor-evidence.json  proposal.md
openspec/changes/archive/2026-07-10-phase-1-agent-mvp/: design.md  manual-mcp-verification.txt  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-action-trace/: design.md  tasks.md
openspec/changes/archive/2026-07-11-browser-assert/: design.md  tasks.md
openspec/changes/archive/2026-07-11-browser-efficiency/: container-test-run.txt  doctor-windows-evidence.json
openspec/changes/archive/2026-07-11-console-capture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-cross-origin-oopif/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-11-deterministic-init/: design.md  tasks.md
openspec/changes/browser-assert/: proposal.md  tasks.md
openspec/changes/browser-efficiency/: design.md  doctor-installed-only-evidence.json  proposal.md  tasks.md
openspec/changes/console-capture/: tasks.md
openspec/changes/cross-origin-oopif/: design.md  proposal.md  tasks.md
openspec/changes/deterministic-init/: proposal.md  tasks.md
openspec/changes/docker-test-harness/: design.md  proposal.md  tasks.md
openspec/changes/html-trace-viewer/: design.md  proposal.md  tasks.md
openspec/changes/human-motion-synthetic/: design.md  proposal.md  tasks.md
openspec/changes/human-motion-trained/: design.md  proposal.md  tasks.md
openspec/changes/llm-providers/: design.md  tasks.md
openspec/changes/mcp-streamable-http/: proposal.md  tasks.md
openspec/changes/mcp-task-delegation/: design.md  tasks.md
openspec/changes/network-mocking/: design.md  proposal.md  tasks.md
openspec/changes/oauth-subscription-auth/: tasks.md
openspec/changes/phase-0-cdp-spike/: design.md  tasks.md
openspec/changes/phase-1-agent-mvp/: tasks.md
openspec/changes/popup-auto-attach/: design.md  proposal.md  tasks.md
openspec/changes/same-origin-iframes/: design.md  proposal.md  tasks.md
openspec/changes/screencast-capture/: design.md  manual-headed-recording-verification.txt  tasks.md
openspec/changes/shadow-dom-walker/: tasks.md
openspec/changes/true-user-input/: design.md  proposal.md  tasks.md
openspec/changes/virtual-clock/: proposal.md  tasks.md
openspec/changes/weekly-chrome-beta-ci/: design.md  tasks.md
openspec/changes/yaml-runner/: design.md  proposal.md  tasks.md
openspec/specs/agent-harness/: spec.md
openspec/specs/browser-actions/: spec.md
openspec/specs/browser-assert/: spec.md
openspec/specs/browser-attach/: spec.md
openspec/specs/browser-recording/: spec.md
openspec/specs/cdp-client/: spec.md
openspec/specs/console-capture/: spec.md
openspec/specs/deterministic-init/: spec.md
openspec/specs/doctor-cli/: spec.md
openspec/specs/html-trace-viewer/: spec.md
openspec/specs/human-motion/: spec.md
openspec/specs/llm-providers/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/mcp-streamable-http/: spec.md
openspec/specs/network-mocking/: spec.md
openspec/specs/page-snapshot/: spec.md
openspec/specs/popup-auto-attach/: spec.md
openspec/specs/same-origin-iframes/: spec.md
openspec/specs/shadow-dom-walker/: spec.md
openspec/specs/true-user-input/: spec.md
openspec/specs/virtual-clock/: spec.md
openspec/specs/yaml-runner/: spec.md
src/: agent_cmd.rs  doctor.rs  lib.rs  main.rs  mcp.rs
tests/: mcp_http_flow.rs  mcp_task_delegation.rs
tests/support/: llm_stub.rs  mod.rs
(+68 files in other folders)
