[workspace]
resolver = "2"
members = ["crates/cdp"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "sync", "io-util", "net"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"

[package]
name = "aib"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[[bin]]
name = "aib"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
cdp = { path = "crates/cdp" }
