[workspace]
resolver = "2"
members = ["crates/cdp", "crates/engine", "crates/mcp", "crates/llm", "crates/agent"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "sync", "io-util", "net"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
ureq = { version = "3", features = ["json"] }
zip = { version = "6", default-features = false, features = ["deflate"] }
sysinfo = "0.37"
image = { version = "0.25", default-features = false, features = ["jpeg", "gif"] }
rand = "0.8"
rand_pcg = "0.3"
serde_yaml = "0.9"
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_System_Threading"] }
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tokio-util = "0.7"

[package]
name = "truewright"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[[bin]]
name = "truewright"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["signal"] }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
cdp = { path = "crates/cdp" }
engine = { path = "crates/engine" }
mcp-server = { path = "crates/mcp" }
llm = { path = "crates/llm" }
agent = { path = "crates/agent" }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
sysinfo.workspace = true
axum.workspace = true
tokio-util.workspace = true
rand.workspace = true

[dev-dependencies]
reqwest.workspace = true
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client-reqwest"] }
anyhow = "1"
