[package]
name = "agent"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }
llm = { path = "../llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
cdp = { path = "../cdp" }
