[package]
name = "cdp"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
base64.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
