[package]
name = "engine"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
cdp = { path = "../cdp" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
