[package]
name = "llm"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# rustls (not the workspace default TLS-less feature set): this crate makes
# real HTTPS calls to LLM providers, which the root binary's own reqwest
# dev-dependency (local-HTTP MCP test client only) never needs.
reqwest = { workspace = true, features = ["rustls"] }
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
