[package]
name = "mcp-server"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
engine = { path = "../engine" }
cdp = { path = "../cdp" }
agent = { path = "../agent" }
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
base64.workspace = true
